--- a/index.html
+++ b/index.html
@@ -80,15 +80,15 @@
                     <div class="detail-box">
                       <h1>
                         Welcome To Our <br>
-                        Gift Shop
+                        Game Shop
                       </h1>
                       <p>
-                        Sequi perspiciatis nulla reiciendis, rem, tenetur impedit, eveniet non necessitatibus error
-                        distinctio mollitia suscipit. Nostrum fugit doloribus consequatur distinctio esse, possimus
-                        maiores aliquid repellat beatae cum, perspiciatis enim, accusantium perferendis.
+                        Game Shop es una tienda de videojuegos en línea que ofrece una amplia gama de juegos de PC, PS4,
+                        Xbox, Nintendo y más. Compra los últimos juegos, consolas y accesorios.
+
                       </p>
                       <a href="">
-                        Contact Us
+                        Escribenos
                       </a>
                     </div>
                   </div>
