--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                   </div>
                   <div class="col-md-5 ">
                     <div class="img-box">
-                      <img src="images/slider-img.png" alt="" />
+                      <img src="images/hero-banner.webp" alt="" />
                     </div>
                   </div>
                 </div>
