--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
-          Latest Products
+          Ultimos Juegos
         </h2>
       </div>
       <div class="row">
