--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
       </div>
       <div class="btn-box">
         <a href="">
-          View All Products
+          Ver todos los juegos
         </a>
       </div>
     </div>
