--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Site Metas -->
   <meta name="keywords" content="" />
   <meta name="description" content="" />
-  <meta name="author" content="" />
+  <meta name="author" content="Lucas, Damian, Sebastian" />
   <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 
   <title>
