--- a/index.html
+++ b/index.html
@@ -189,10 +189,10 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="/images/hero-banner.webp" class="d-block w-100 carousel-img" alt="...">
+          <img src="/images/re5.avif" class="d-block w-100 carousel-img" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Second slide label</h5>
-            <p>Some representative placeholder content for the second slide.</p>
+            <h5>Resident Evil 4</h5>
+            <p>Disfruta del ultimo</p>
           </div>
         </div>
         <div class="carousel-item">
