modicacion de fotos

--- a/shop.html
+++ b/shop.html
@@ -14,7 +14,7 @@
   <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 
   <title>
-    Giftos
+    Kratos Game Shop
   </title>
 
   <!-- slider stylesheet -->
@@ -36,7 +36,7 @@
       <nav class="navbar navbar-expand-lg custom_nav-container ">
         <a class="navbar-brand" href="index.html">
           <span>
-            Giftos
+            Kratos Game Shop
           </span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -97,7 +97,7 @@
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
-          Latest Products
+          Ultimos productos
         </h2>
       </div>
       <div class="row">
@@ -105,16 +105,91 @@
           <div class="box">
             <a href="">
               <div class="img-box">
-                <img src="images/p1.png" alt="">
+                <img src="images/Marvel-Spiderman-2.jpg" alt="" width="200px" height="200px">
               </div>
               <div class="detail-box">
                 <h6>
-                  Ring
+                  Marvel Spider Man 2 PS5
                 </h6>
                 <h6>
-                  Price
+                  Precio:
                   <span>
-                    $200
+                    Desde $44.125 ARS
+                  </span>
+                </h6>
+              </div>
+              <div class="new">
+                <span>
+                  Fisico  
+                </span>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3">
+          <div class="box">
+            <a href="">
+              <div class="img-box">
+                <img src="images/ea-sports-fc-25-standard-edition-ps5.jpg" alt=""width="200px" height="200px">
+              </div>
+              <div class="detail-box">
+                <h6>
+                  EA SPORTS FC 25 Standard Edition PS5
+                </h6>
+                <h6>
+                  Precio:
+                  <span>
+                    Desde $23.250 ARS
+                  </span>
+                </h6>
+              </div>
+              <div class="new">
+                <span>
+                  Digital
+                </span>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3">
+          <div class="box">
+            <a href="">
+              <div class="img-box">
+                <img src="images/dragon-ball-sparking-zero-ps5.jpg" alt="" width="200px" height="200px">
+              </div>
+              <div class="detail-box">
+                <h6>
+                  DRAGON BALL Sparking ZERO PS5
+                </h6>
+                <h6>
+                  Precio:
+                  <span>
+                    Desde $55.500 ARS
+                  </span>
+                </h6>
+              </div>
+              <div class="new">
+                <span>
+                  Digital
+                </span>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3">
+          <div class="box">
+            <a href="">
+              <div class="img-box">
+                <img src="images/ufc-5-ps5.jpg" alt="" width="200px" height="200px">
+              </div>
+              <div class="detail-box">
+                <h6>
+                  UFC 5 PS5
+                </h6>
+                <h6>
+                  Precio:
+                  <span>
+                    Desde $48.875 ARS
                   </span>
                 </h6>
               </div>
@@ -130,82 +205,7 @@
           <div class="box">
             <a href="">
               <div class="img-box">
-                <img src="images/p2.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h6>
-                  Watch
-                </h6>
-                <h6>
-                  Price
-                  <span>
-                    $300
-                  </span>
-                </h6>
-              </div>
-              <div class="new">
-                <span>
-                  New
-                </span>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="box">
-            <a href="">
-              <div class="img-box">
-                <img src="images/p3.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h6>
-                  Teddy Bear
-                </h6>
-                <h6>
-                  Price
-                  <span>
-                    $110
-                  </span>
-                </h6>
-              </div>
-              <div class="new">
-                <span>
-                  New
-                </span>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="box">
-            <a href="">
-              <div class="img-box">
-                <img src="images/p4.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h6>
-                  Flower Bouquet
-                </h6>
-                <h6>
-                  Price
-                  <span>
-                    $45
-                  </span>
-                </h6>
-              </div>
-              <div class="new">
-                <span>
-                  New
-                </span>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="box">
-            <a href="">
-              <div class="img-box">
-                <img src="images/p5.png" alt="">
+                <img src="images/p5.png" alt="" width="200px" height="200px">
               </div>
               <div class="detail-box">
                 <h6>
@@ -230,7 +230,7 @@
           <div class="box">
             <a href="">
               <div class="img-box">
-                <img src="images/p6.png" alt="">
+                <img src="images/p6.png" alt="" width="200px" height="200px">
               </div>
               <div class="detail-box">
                 <h6>
@@ -255,7 +255,7 @@
           <div class="box">
             <a href="">
               <div class="img-box">
-                <img src="images/p7.png" alt="">
+                <img src="images/p7.png" alt="" width="200px" height="200px">
               </div>
               <div class="detail-box">
                 <h6>
@@ -280,7 +280,7 @@
           <div class="box">
             <a href="">
               <div class="img-box">
-                <img src="images/p8.png" alt="">
+                <img src="images/p8.png" alt="" " width="200px" height="200px">
               </div>
               <div class="detail-box">
                 <h6>
