--- a/index.html
+++ b/index.html
@@ -198,23 +198,23 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="/images/hero-banner.webp" class="d-block w-100 carousel-img" alt="...">
+          <img src="images/fortnite.jpg" class="d-block w-100 carousel-img" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>FORTNITE</h5>
-            <p>Las mejores skins de Fornite para ganar partidas</p>
+            <p>Conseguí acá las mejores skins</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="/images/re5.avif" class="d-block w-100 carousel-img" alt="...">
+          <img src="images/residentevil4.jpeg" class="d-block w-100 carousel-img" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Resident Evil 4</h5>
             <p>Disfruta del ultimo</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="/images/hero-banner.webp" class="d-block w-100 carousel-img" alt="...">
+          <img src="/images/Stalker" class="d-block w-100 carousel-img" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Third slide label</h5>
+            <h5>Stalker 2</h5>
             <p>Some representative placeholder content for the third slide.</p>
           </div>
         </div>
@@ -248,22 +248,22 @@
           <div class="box">
             <a href="">
               <div class="img-box">
-                <img src="images/p1.png" alt="">
+                <img src="images/Marvel-Spiderman-2.jpg" alt="">
               </div>
               <div class="detail-box">
                 <h6>
-                  Ring
+                  Marvel Spider Man 2 PS5
                 </h6>
                 <h6>
-                  Price
+                  Precio:
                   <span>
-                    $200
+                    Desde $44.125 ARS
                   </span>
                 </h6>
               </div>
               <div class="new">
                 <span>
-                  New
+                  Fisico
                 </span>
               </div>
             </a>
