--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 
   <title>
-    Game Store
+    Kratos Game Home
   </title>
 
   <link rel="stylesheet" type="text/css"
@@ -32,7 +32,7 @@
       <nav class="navbar navbar-expand-lg custom_nav-container ">
         <a class="navbar-brand" href="index.html">
           <span>
-            GAME STORE
+            Kratos Game Shop
           </span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -208,14 +208,14 @@
           <img src="images/residentevil4.jpeg" class="d-block w-100 carousel-img" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Resident Evil 4</h5>
-            <p>Disfruta del ultimo</p>
+            <p>El clásico renace con gráficos impresionantes y una jugabilidad rediseñada</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="/images/Stalker" class="d-block w-100 carousel-img" alt="...">
+          <img src="images/stalker2.jpeg" class="d-block w-100 carousel-img" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Stalker 2</h5>
-            <p>Some representative placeholder content for the third slide.</p>
+            <p>Pura inmersión postapocalíptica</p>
           </div>
         </div>
       </div>
