--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <header class="header_section">
       <nav class="navbar navbar-expand-lg custom_nav-container ">
         <a class="navbar-brand" href="index.html">
+          <img src="images/kratos.png">
           <span>
             Kratos Game Shop
           </span>
