--- a/shop.html
+++ b/shop.html
@@ -48,8 +48,8 @@
 
         <div class="collapse navbar-collapse innerpage_navbar" id="navbarSupportedContent">
           <ul class="navbar-nav  ">
-            <li class="nav-item ">
-              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home <span class="sr-only"></span></a>
             </li>
             <li class="nav-item active">
               <a class="nav-link" href="shop.html">
@@ -72,13 +72,8 @@
           </ul>
           <div class="user_option">
             <a href="">
-              <i class="fa fa-user" aria-hidden="true"></i>
-              <span>
-                Login
-              </span>
-            </a>
-            <a href="">
               <i class="fa fa-shopping-bag" aria-hidden="true"></i>
+              <span class="cart-badge">0</span>
             </a>
             <form class="form-inline ">
               <button class="btn nav_search-btn" type="submit">
@@ -86,6 +81,7 @@
               </button>
             </form>
           </div>
+
         </div>
       </nav>
     </header>
