Implement checkout page functionality with dynamic cart display and localization updates

--- a/checkout.html
+++ b/checkout.html
@@ -92,58 +92,13 @@
             <div class="box-inner-1 pb-3 mb-3 ">
                 <div class="d-flex justify-content-between mb-3 userdetails">
                     <p class="fw-bold">Tu carrito</p>
-                    <p class="fw-lighter"><span class="fas fa-dollar-sign"></span>33.00+</p>
                 </div>
 
                 <p class="dis info my-3">
                     Revisa tu compra y completa tu pago
                 </p>
                 <div class="radiobtn">
-                    <input type="radio" name="box" id="one">
-                    <input type="radio" name="box" id="two">
-                    <input type="radio" name="box" id="three">
-                    <label for="one" class="box py-2 first">
-                        <div class="d-flex align-items-start">
-                            <span class="circle"></span>
-                            <div class="course">
-                                <div class="d-flex align-items-center justify-content-between mb-2">
-                                    <span class="fw-bold">
-                                        Collection 01
-                                    </span>
-                                    <span class="fas fa-dollar-sign">29</span>
-                                </div>
-                                <span>10 x Presets. Released in 2018</span>
-                            </div>
-                        </div>
-                    </label>
-                    <label for="two" class="box py-2 second">
-                        <div class="d-flex">
-                            <span class="circle"></span>
-                            <div class="course">
-                                <div class="d-flex align-items-center justify-content-between mb-2">
-                                    <span class="fw-bold">
-                                        Collection 01
-                                    </span>
-                                    <span class="fas fa-dollar-sign">29</span>
-                                </div>
-                                <span>10 x Presets. Released in 2018</span>
-                            </div>
-                        </div>
-                    </label>
-                    <label for="three" class="box py-2 third">
-                        <div class="d-flex">
-                            <span class="circle"></span>
-                            <div class="course">
-                                <div class="d-flex align-items-center justify-content-between mb-2">
-                                    <span class="fw-bold">
-                                        Collection 01
-                                    </span>
-                                    <span class="fas fa-dollar-sign">29</span>
-                                </div>
-                                <span>10 x Presets. Released in 2018</span>
-                            </div>
-                        </div>
-                    </label>
+
                 </div>
             </div>
         </div>
@@ -157,37 +112,36 @@
                 </div>
                 <form action="">
                     <div class="mb-3">
-                        <p class="dis fw-bold mb-2">Email address</p>
+                        <p class="dis fw-bold mb-2">eMail</p>
                         <input class="form-control" type="email" value="luke@skywalker.com">
                     </div>
                     <div>
-                        <p class="dis fw-bold mb-2">Card details</p>
+                        <p class="dis fw-bold mb-2">Tarjeta de credito</p>
                         <div class="d-flex align-items-center justify-content-between card-atm border rounded">
                             <div class="fab fa-cc-visa ps-3"></div>
-                            <input type="text" class="form-control" placeholder="Card Details">
+                            <input type="text" class="form-control" placeholder="82893747623987">
                             <div class="d-flex w-50">
                                 <input type="text" class="form-control px-0" placeholder="MM/YY">
                                 <input type="password" maxlength=3 class="form-control px-0" placeholder="CVV">
                             </div>
                         </div>
                         <div class="my-3 cardname">
-                            <p class="dis fw-bold mb-2">Cardholder name</p>
+                            <p class="dis fw-bold mb-2">Nombre</p>
                             <input class="form-control" type="text">
                         </div>
                         <div class="address">
-                            <p class="dis fw-bold mb-3">Billing address</p>
-                            <select class="form-select" aria-label="Default select example">
-                                <option selected hidden>United States</option>
-                                <option value="1">India</option>
-                                <option value="2">Australia</option>
-                                <option value="3">Canada</option>
+                            <p class="dis fw-bold mb-3">Informacion de facturacion</p>
+                            <select class="form-select" aria-label="Selecciona un pais">
+                                <option selected hidden>Argentina</option>
+                                <option value="1">Agentina</option>
+                                <option value="2">Brasil</option>
+                                <option value="3">Chile</option>
                             </select>
                             <div class="d-flex">
-                                <input class="form-control zip" type="text" placeholder="ZIP">
-                                <input class="form-control state" type="text" placeholder="State">
+                                <input class="form-control Codigo Postal" type="text" placeholder="Codigo Postal">
                             </div>
                             <div class=" my-3">
-                                <p class="dis fw-bold mb-2">VAT Number</p>
+                                <p class="dis fw-bold mb-2">Codigo de seguridad</p>
                                 <div class="inputWithcheck">
                                     <input class="form-control" type="text" value="GB012345B9">
                                     <span class="fas fa-check"></span>
@@ -195,14 +149,6 @@
                                 </div>
                             </div>
                             <div class="d-flex flex-column dis">
-                                <div class="d-flex align-items-center justify-content-between mb-2">
-                                    <p>Subtotal</p>
-                                    <p><span class="fas fa-dollar-sign"></span>33.00</p>
-                                </div>
-                                <div class="d-flex align-items-center justify-content-between mb-2">
-                                    <p>VAT<span>(20%)</span></p>
-                                    <p><span class="fas fa-dollar-sign"></span>2.80</p>
-                                </div>
                                 <div class="d-flex align-items-center justify-content-between mb-2">
                                     <p class="fw-bold">Total</p>
                                     <p class="fw-bold"><span class="fas fa-dollar-sign"></span>35.80</p>
@@ -314,7 +260,39 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
     </script>
     <script src="js/custom.js"></script>
-    <script src="js/games.js"></script>
+    <script src="js/checkout.js"></script>
+
+    <style>
+        .cart-item {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 1rem;
+            font-size: 1.2rem;
+            background-color: aliceblue;
+            padding: 1rem;
+
+        }
+
+        .cart-item_name {
+            font-size: 1.2rem;
+        }
+
+        .cart-item_price {
+            color: green;
+        }
+
+        .cart-action {
+            display: flex;
+            align-items: center;
+        }
+
+        .cart-icon {
+            background: none;
+            border: none;
+            color: red;
+            font-size: 1.5rem;
+        }
+    </style>
 </body>
 
 </html>
