Update checkout page to display total price dynamically and handle empty cart scenario

--- a/checkout.html
+++ b/checkout.html
@@ -94,7 +94,7 @@
                     <p class="fw-bold">Tu carrito</p>
                 </div>
 
-                <p class="dis info my-3">
+                <p class="dis info my-3" id="carrito-info">
                     Revisa tu compra y completa tu pago
                 </p>
                 <div class="radiobtn">
@@ -151,9 +151,11 @@
                             <div class="d-flex flex-column dis">
                                 <div class="d-flex align-items-center justify-content-between mb-2">
                                     <p class="fw-bold">Total</p>
-                                    <p class="fw-bold"><span class="fas fa-dollar-sign"></span>35.80</p>
+                                    <p class="fw-bold" id="total-price"><span class="fas fa-dollar-sign"></span>
+                                    </p>
                                 </div>
-                                <div class="btn btn-primary mt-2">Pay<span class="fas fa-dollar-sign px-1"></span>35.80
+                                <div class="btn btn-primary mt-2" id="pay-price">Pay<span
+                                        class="fas fa-dollar-sign px-1"></span>
                                 </div>
                             </div>
                         </div>
