Update game data structure and modify shop link in index.html

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <div class="row row-cols-4 g-3" id="game-grid">
       </div>
       <div class="btn-box">
-        <a href="">
+        <a href="/shop.html">
           Ver todos los juegos
         </a>
       </div>
