Fix game fetching logic, update cart badge functionality, and translate contact and shop sections to Spanish

--- a/contact.html
+++ b/contact.html
@@ -71,12 +71,7 @@
             </li>
           </ul>
           <div class="user_option">
-            <a href="">
-              <i class="fa fa-user" aria-hidden="true"></i>
-              <span>
-                Login
-              </span>
-            </a>
+
             <a href="">
               <i class="fa fa-shopping-bag" aria-hidden="true"></i>
             </a>
@@ -95,11 +90,11 @@
 
   <!-- contact section -->
 
-  <section class="contact_section layout_padding">
+  <section class="contact_section ">
     <div class="container px-0">
       <div class="heading_container ">
         <h2 class="">
-          Contact Us
+          Contacto
         </h2>
       </div>
     </div>
@@ -118,20 +113,20 @@
         <div class="col-md-6 col-lg-5 px-0">
           <form action="#">
             <div>
-              <input type="text" placeholder="Name" />
+              <input type="text" placeholder="Nombre" />
             </div>
             <div>
               <input type="email" placeholder="Email" />
             </div>
             <div>
-              <input type="text" placeholder="Phone" />
+              <input type="text" placeholder="Telefono" />
             </div>
             <div>
-              <input type="text" class="message-box" placeholder="Message" />
+              <input type="text" class="message-box" placeholder="Mensaje" />
             </div>
             <div class="d-flex ">
               <button>
-                SEND
+                Enviar consulta
               </button>
             </div>
           </form>
@@ -234,6 +229,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
   </script>
   <script src="js/custom.js"></script>
+  <script src="js/games.js"></script>
+
 
 </body>
 
