--- a/testimonial.html
+++ b/testimonial.html
@@ -95,7 +95,7 @@
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
-          Testimonial
+          Clientes felices
         </h2>
       </div>
     </div>
@@ -107,20 +107,18 @@
               <div class="client_info">
                 <div class="client_name">
                   <h5>
-                    Morijorch
+                    Lucas
                   </h5>
                   <h6>
-                    Default model text
+                    15 años
                   </h6>
                 </div>
                 <i class="fa fa-quote-left" aria-hidden="true"></i>
               </div>
               <p>
-                editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover
-                many web sites still in their infancy. Variouseditors now use Lorem Ipsum as their default model text,
-                and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Variouseditors now
-                use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites
-                still in their infancy. Various
+                Esta es la mejor tienda de juegos que he visitado. La atención es excelente y los precios son
+                muy accesibles. ¡Volveré pronto!
+
               </p>
             </div>
           </div>
@@ -129,20 +127,17 @@
               <div class="client_info">
                 <div class="client_name">
                   <h5>
-                    Rochak
+                    Damian
                   </h5>
                   <h6>
-                    Default model text
+                    20 años
                   </h6>
                 </div>
                 <i class="fa fa-quote-left" aria-hidden="true"></i>
               </div>
               <p>
-                Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will
-                uncover many web sites still in their infancy. Variouseditors now use Lorem Ipsum as their default model
-                text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. editors now use
-                Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites
-                still in their infancy.
+                Siempre compro mis juegos acá. La calidad de los productos es excelente y el servicio al cliente es
+                inmejorable. ¡100% recomendado!
               </p>
             </div>
           </div>
@@ -151,20 +146,16 @@
               <div class="client_info">
                 <div class="client_name">
                   <h5>
-                    Brad Johns
+                    Sebastian
                   </h5>
                   <h6>
-                    Default model text
+                    25 años
                   </h6>
                 </div>
                 <i class="fa fa-quote-left" aria-hidden="true"></i>
               </div>
               <p>
-                Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will
-                uncover many web sites still in their infancy, editors now use Lorem Ipsum as their default model text,
-                and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Variouseditors now
-                use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites
-                still in their infancy. Various
+                La atención es excelente y los precios son muy accesibles. ¡Volveré pronto!
               </p>
             </div>
           </div>
@@ -172,11 +163,11 @@
         <div class="carousel_btn-box">
           <a class="carousel-control-prev" href="#customCarousel2" role="button" data-slide="prev">
             <i class="fa fa-angle-left" aria-hidden="true"></i>
-            <span class="sr-only">Previous</span>
+            <span class="sr-only">Anterior</span>
           </a>
           <a class="carousel-control-next" href="#customCarousel2" role="button" data-slide="next">
             <i class="fa fa-angle-right" aria-hidden="true"></i>
-            <span class="sr-only">Next</span>
+            <span class="sr-only">Siguiente</span>
           </a>
         </div>
       </div>
@@ -208,11 +199,12 @@
         <div class="row">
           <div class="col-md-6 col-lg-3">
             <h6>
-              ABOUT US
+              Quienes somos
             </h6>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur
-              adipiscing elit, sed doLorem ipsum dolor sit amet,
+              Somos una tienda de juegos online que ofrece los mejores productos a los mejores precios. ¡Conocé más
+              sobre nosotros!
+
             </p>
           </div>
           <div class="col-md-6 col-lg-3">
@@ -221,30 +213,30 @@
                 Newsletter
               </h5>
               <form action="#">
-                <input type="email" placeholder="Enter your email">
+                <input type="email" placeholder="Ingresa tu email">
                 <button>
-                  Subscribe
+                  Suscribirse
                 </button>
               </form>
             </div>
           </div>
           <div class="col-md-6 col-lg-3">
             <h6>
-              NEED HELP
+              Necesitas ayuda?
             </h6>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur
-              adipiscing elit, sed doLorem ipsum dolor sit amet,
+              Si tenés alguna consulta o necesitás ayuda, no dudes en contactarnos. ¡Estamos para ayudarte!
+
             </p>
           </div>
           <div class="col-md-6 col-lg-3">
             <h6>
-              CONTACT US
+              Contacto
             </h6>
             <div class="info_link-box">
               <a href="">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
-                <span> Gb road 123 london Uk </span>
+                <span> Calle falsa 123 </span>
               </a>
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
@@ -252,7 +244,7 @@
               </a>
               <a href="">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
-                <span> demo@gmail.com</span>
+                <span>uade@gmail.com</span>
               </a>
             </div>
           </div>
@@ -263,8 +255,8 @@
     <footer class=" footer_section">
       <div class="container">
         <p>
-          &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="https://html.design/">Free Html Templates</a>
+          &copy; <span id="displayYear"></span> Todos los derechos reservados | Diseñado por
+          <a href="https://github.com/lucasangelino/ecommerce-uade" target="_blank">Lucas, Damian y Sebastian</a>
         </p>
       </div>
     </footer>
@@ -280,6 +272,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
   </script>
   <script src="js/custom.js"></script>
+  <script src="js/games.js"></script>
+
 
 </body>
 
