--- a/shop.html
+++ b/shop.html
@@ -131,11 +131,12 @@
         <div class="row">
           <div class="col-md-6 col-lg-3">
             <h6>
-              ABOUT US
+              Quienes somos
             </h6>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur
-              adipiscing elit, sed doLorem ipsum dolor sit amet,
+              Somos una tienda de juegos online que ofrece los mejores productos a los mejores precios. ¡Conocé más
+              sobre nosotros!
+
             </p>
           </div>
           <div class="col-md-6 col-lg-3">
@@ -144,30 +145,30 @@
                 Newsletter
               </h5>
               <form action="#">
-                <input type="email" placeholder="Enter your email">
+                <input type="email" placeholder="Ingresa tu email">
                 <button>
-                  Subscribe
+                  Suscribirse
                 </button>
               </form>
             </div>
           </div>
           <div class="col-md-6 col-lg-3">
             <h6>
-              NEED HELP
+              Necesitas ayuda?
             </h6>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur
-              adipiscing elit, sed doLorem ipsum dolor sit amet,
+              Si tenés alguna consulta o necesitás ayuda, no dudes en contactarnos. ¡Estamos para ayudarte!
+
             </p>
           </div>
           <div class="col-md-6 col-lg-3">
             <h6>
-              CONTACT US
+              Contacto
             </h6>
             <div class="info_link-box">
               <a href="">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
-                <span> Gb road 123 london Uk </span>
+                <span> Calle falsa 123 </span>
               </a>
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
@@ -175,7 +176,7 @@
               </a>
               <a href="">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
-                <span> demo@gmail.com</span>
+                <span>uade@gmail.com</span>
               </a>
             </div>
           </div>
@@ -186,8 +187,8 @@
     <footer class=" footer_section">
       <div class="container">
         <p>
-          &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="https://html.design/">Free Html Templates</a>
+          &copy; <span id="displayYear"></span> Todos los derechos reservados | Diseñado por
+          <a href="https://github.com/lucasangelino/ecommerce-uade" target="_blank">Lucas, Damian y Sebastian</a>
         </p>
       </div>
     </footer>
@@ -204,6 +205,8 @@
   </script>
   <script src="js/custom.js"></script>
   <script src="js/games.js"></script>
+  <script src="js/games.js"></script>
+
 
 
 </body>
